--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,6 +2,5 @@ steps:
 - name: 'gcr.io/gcp-runtimes/ubuntu_22_0_4'
   entrypoint: 'curl'
   args: ['http://google.com/']
-  env:
-  - CLOUD_LOGGING_ONLY
+logsBucket: 'gs://rtrentin-01_cloudbuild'
 
