--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,3 +7,4 @@ steps:
 options:
   workerPool:
     'projects/rtrentin01/locations/us-east1/workerPools/vpc001-private-pool'
+logsBucket: 'gs://rtrentin-01_cloudbuild'
